# shed

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
examples/: README.md  example.sd  setup.sh
examples/copy/: copy_request.sd
shed/: __init__.py  __main__.py  cli.py  config.py  execute.py  run.py  utils.py
shed/_impl/: __init__.py  call.py  env.py
shed/std/: __init__.py  output_processing.py
shed/transpiler/: __init__.py  context.py  retokenizer.py  transpiler.py  utils.py
